tests/lists/ill-typed/ambiguous-list-type-isempty.stella
language core;
extend with #lists;


fn main(n : Nat) -> Bool {
  return List::isempty([])
}
